--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -61,17 +61,9 @@ html {
     display: grid;
     margin-left: 10px;
   }
-      
-  #alert {
-    display: none;
-    background-color: coral;
-    padding: 10px;
-    text-align: center;
-    box-shadow: #0003 0 5px 10px -5px;
-    border-radius: 15px;
-  }
   
   #dot {
+    font-family: 'Montserrat', sans-serif;
     display: none;
     color: white;
     background-color: salmon;
