Increase <textarea> Margin

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,6 +34,7 @@ textarea {
   border-radius: inherit;
   border: none;
   padding: 10px;
+  margin: 3px;
   scrollbar-width: none;
   background-color: #efebe9;
   font-family: 'Montserrat', sans-serif;
