Adds new managers

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -41,7 +41,7 @@ textarea {
   font-size: inherit;
 }
     
-#host, #m0, #m1, #m2, #m3, #m4 {
+#host, #m0, #m1, #m2, #m3, #m4, #m5 {
   margin: 10px;
   background-color: #f9f9f9;
   font-family: 'Montserrat', sans-serif;
