--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=block');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&display=block');
+
 html {
   background-color: antiquewhite;
   background-image: url("/bg.svg");
   background-size: cover;
   background-position: bottom;
   height: 100%;
+  font-family: 'Nunito Sans';
 }
     
 body {
@@ -32,6 +36,7 @@ a {
 }
 
 textarea {
+  font-family: 'Fira Mono';
   resize: none;
   outline: none;
   border-radius: inherit;
@@ -40,7 +45,6 @@ textarea {
   margin: 3px;
   scrollbar-width: none;
   background-color: #efebe9;
-  font-family: 'Montserrat', sans-serif;
   font-size: inherit;
 }
 
@@ -62,7 +66,6 @@ textarea {
 #host, #m0, #m1, #m2, #m3, #m4, #m5 {
   margin: 2px 5px;
   background-color: #fffc;
-  font-family: 'Montserrat', sans-serif;
   color: #34495e;
   font-weight: bold;
   display: flex;
@@ -95,11 +98,6 @@ textarea {
 #m5 {
   border-radius: 10px 10px 50px 10px;
 }
-
-#host-notice {
-  font-family: 'Marck Script', cursive;
-  color: #cf7d5a;
-}
     
 #user {
   display: grid;
@@ -107,7 +105,6 @@ textarea {
 }
 
 #dot {
-  font-family: 'Montserrat', sans-serif;
   display: none;
   color: white;
   background-color: salmon;
@@ -207,7 +204,6 @@ textarea {
 .links {
   grid-area: links;
   display: flex;
-  font-family: 'Montserrat', sans-serif;;
   font-weight: bold;
   font-size: small;
   color: #34495e;
@@ -241,7 +237,6 @@ textarea {
 }
 
 .reminders, .other-page, .nf-page {
-  font-family: 'Montserrat', sans-serif;;
   font-weight: bold;
   font-size: small;
   color: #34495e;
